fix main container position on mobile

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -23,7 +23,7 @@ body {
 main {
   position: absolute;
   width: 90%;
-  top: 50%;
+  top: 400px;
   left: 0;
   right: 0;
   margin: auto;
